myweb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: myweb-deployment
    labels: 
       app: mywebapp
spec:
    replicas: 2
    selector:
       matchLabels:
          app: mywebapp
    template:
       metadata:
          labels:
            app: mywebapp
       spec:
          containers:
           - name: mywebapp-container
             image: nginx:latest
             ports:
             - containerPort: 80
