myweb-service.yaml
apiVersion: v1
kind: Service
metadata:
   name: myweb-service
spec:
   selector:
      app: mywebapp
   ports:
   - protocol: TCP
     port: 80
     targetPort: 80
   type: NodePort
