myweb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myweb
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx
  rules:
  - http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
           name: myweb-service
           port:
             number: 80
